Correções para resolver o bug nas chamadas aos enpoints buscarPorEmail e buscarPorTelefone da ClienteController